arrow stuff for pageFpage1

--- a/src/pageF/App.css
+++ b/src/pageF/App.css
@@ -78,5 +78,23 @@ button:hover {
 p{
   text-transform: uppercase;
   font-family: "Comic Sans MS";
+}
 
+.instructions{
+  display:inline-block;
+  font-family: "Comic Sans MS";
+  color:#D50A24;
+}
+
+.clickhere{
+  margin-right:0%;
+  float:left;
+  display:block;
+  width: 70%;
+}
+
+.arrow{
+  float: left;
+  height: 20%;
+  width: 20%;
 }
