--- a/src/pageF/page0/App.css
+++ b/src/pageF/page0/App.css
@@ -6,8 +6,8 @@
     animation: App-logo-spin infinite 20s linear;
     height: 40vmin;
     border-radius: 50%;
-    size: 2cm;
-    padding: 20px;
+    margin-top: 8%;
+    margin-bottom: 5%;
 }
 
 .App-header {
@@ -47,6 +47,8 @@ a{
     border-style: dashed;
     display:inline-block;
     font-size:80%;
+    margin-top: 3%;
+    margin-bottom: 10%;
   }
   
   
