buttons and voice fix

--- a/src/pageF/App.css
+++ b/src/pageF/App.css
@@ -98,3 +98,13 @@ p{
   height: 20%;
   width: 20%;
 }
+
+.story-paragraph:hover{
+  color: #D50A24;
+}
+
+.stop-speak{
+  position: absolute;
+  top: 5%;
+  right: 3%;
+}
