--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+    font-size: calc(5px + 2vmin);
+    font-family: "Comic Sans MS";
     color: white;
 }
 
@@ -30,4 +31,54 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+a{
+    color:white;
+    text-decoration: none;
+  }
+  
+  button{
+    background:none;
+    color:white;
+    text-transform: uppercase;
+    font-family: "Comic Sans MS";
+    border-style: dashed;
+    display:inline-block;
+    font-size:150%;
+  }
+  
+  
+  /* https://www.w3schools.com/howto/howto_css_shake_image.asp */
+  button:hover {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+  
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite;
+
+    background-color: black;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+  
+  p{
+    text-transform: uppercase;
+    font-family: "Comic Sans MS";
+  
+  }
+.story-paragraph:hover{
+  color: #D50A24;
 }
